[package]
name = "transit"
description = "A transit web application built with Actix and Diesel."
repository = "https://github.com/rafaeltlv/transit"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
actix-rt = "2.9.0"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix = "0.13.1"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html